# QML-Benchmarking

./: .gitignore  Dockerfile  NOTICE.txt  README.md  Ranking.xlsx  benchmark_results.csv  jobfile.slurm  pyproject.toml  requirements.txt
paper/benchmarks/: generate_bars_and_stripes.py  generate_hidden_manifold.py  generate_hyperplanes.py  generate_linearly_separable.py  generate_mnist.py  generate_two_curves.py
paper_extension/benchmarks/: Model_Scoring.py  automatic_hyperparmeter_search.py  benchmark_pipeline.py  benchmark_pipeline_classifier.py  benchmark_pipeline_regressor.py  extension_hyperparameter_search.py  generate_datasets.py
paper_extension/benchmarks/tests/: test_additions_hyperparameter_search.py  test_extension_hyperparameter_search.py
paper_extension/results_phase1/: benchmark_best_hyperparams.csv
paper_extension/results_phase1/results/: MLP_bars_and_stripes_width32_train_GridSearchCV-best-hyperparameters.csv  MLP_bars_and_stripes_width32_train_GridSearchCV.csv  MLP_bars_and_stripes_width8_train_GridSearchCV.csv  MLP_credit_card_fraud_train_GridSearchCV.csv  MLP_hmm_n_features10_manifold_dimension6_train_GridSearchCV-best-hyperparameters.csv  (+84 more)
paper_extension/results_phase2/: benchmark_best_hyperparams.csv
paper_extension/results_phase3/: benchmark_best_hyperparams.csv
scripts/: Model_Scoring.py  automatic_hyperparmeter_search.py  benchmark_pipeline.py  generate_datasets.py  run_hyperparameter_search.py
src/qml_benchmarks/: Model_Scoring.py  benchmark_pipeline.py  hyperparam_search_utils.py  hyperparameter_settings.py  model_utils.py
(+348 files in other folders)
