[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qml_benchmarks"
description = "A package to benchmark quantum machine learning models"
authors = [{name = "Cha1tanyaa, QML Team XanaduAI"}]
classifiers = [
    "Development Status :: 3 - Extending",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "numpy",
    "pennylane",
    "scikit_learn",
    "matplotlib",
    "jax",
    "jaxlib",
    "flax",
    "optax",
    "typing-extensions",
    "pyyaml",
    "pandas",
    "seaborn",
    "scipy"
]

